<resources>
    <string name="app_name">Food Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favoriteRecipesFragment">Favorite</string>
    <string name="foodJokeFragment">Food Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eum illum neque quas quia quibusdam recusandae repudiandae tenetur veritatis voluptatum. Beatae corporis et excepturi itaque nobis obcaecati, optio sit tempora?</string>
    <string name="placeholder_text_view">&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="filter_recipes">Filter Recipes</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="diet_type">Diet Type</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="glutten_free">Glutten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="cheap">Cheap</string>
    <string name="time_cook">Time Cook</string>
    <string name="save_to_favorite_recipes">Save To Favorite Recipes</string>
    <string name="delete_favorite_recipes">Delete Favorite Recipes</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
    <string name="light_dark">Light / Dark</string>
</resources>